--- a/js-projeto-de-vida-codigo-base/index.html
+++ b/js-projeto-de-vida-codigo-base/index.html
@@ -10,13 +10,33 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <h2 class="titulo-principal">Meus Objetivos de vida<span>_</span></h2>
+        <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfolio</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao ativo">Viajar para a Europa</button>
+            <button class="botao">Comprar uma moto 4 cilindros</button>
+            <button class="botao">Entrar no programa de mestrado</button>
+            <button class="botao">Conhecer o estádio Morumbi</button>
         </div>
+        <div class="aba-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Viajar para a Europa</h3>
+                <h4 class="aba-conteudo titulo secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Comprar uma moto 4 cilindros</h3>
+                <h4 class="aba-conteudo titulo secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Entrar no programa de mestrado</h3>
+                <h4 class="aba-conteudo titulo secundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Viajar para a Europa</h3>
+                <h4 class="aba-conteudo titulo secundario">Conhecer o estádio Morumbi</h4>
+            </div>
+        </div>
+    </div>
     </section>
     <script src="main.js"></script>
 </body>
