--- a/js-projeto-de-vida-codigo-base/index.html
+++ b/js-projeto-de-vida-codigo-base/index.html
@@ -19,21 +19,21 @@
             <button class="botao">Conhecer o estádio Morumbi</button>
         </div>
         <div class="aba-textos">
-            <div class="aba-conteudo">
+            <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Viajar para a Europa</h3>
-                <h4 class="aba-conteudo titulo secundario">Tempo para completar o objetivo</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Comprar uma moto 4 cilindros</h3>
-                <h4 class="aba-conteudo titulo secundario">Tempo para completar o objetivo</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Entrar no programa de mestrado</h3>
-                <h4 class="aba-conteudo titulo secundario">Tempo para completar o objetivo</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Viajar para a Europa</h3>
-                <h4 class="aba-conteudo titulo secundario">Conhecer o estádio Morumbi</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Conhecer o estádio Morumbi</h4>
             </div>
         </div>
     </div>
