--- a/js-projeto-de-vida-codigo-base/index.html
+++ b/js-projeto-de-vida-codigo-base/index.html
@@ -32,8 +32,8 @@
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Viajar para a Europa</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Conhecer o estádio Morumbi</h4>
+                <h3 class="aba-conteudo-titulo-principal">Conhecer o estádio Morumbi</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             </div>
         </div>
     </div>
