--- a/js-projeto-de-vida-codigo-base/index.html
+++ b/js-projeto-de-vida-codigo-base/index.html
@@ -22,18 +22,22 @@
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Viajar para a Europa</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Comprar uma moto 4 cilindros</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Entrar no programa de mestrado</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Conhecer o estádio Morumbi</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
         </div>
     </div>
